--- a/styles.css
+++ b/styles.css
@@ -36,8 +36,7 @@ body {
     color: #333;
 }
 
-#annotation-mode,
-#clear-annotations {
+#draw-polygon {
     display: inline-block;
     margin-top: 10px;
     padding: 10px 20px;
@@ -51,9 +50,6 @@ body {
     transition: background-color 0.3s ease;
 }
 
-#annotation-mode:hover,
-#clear-annotations:hover {
+#draw-polygon:hover {
     background-color: #0056b3;
 }
-
-
