Added Login Page with Cognito

--- a/styles.css
+++ b/styles.css
@@ -340,4 +340,19 @@ body {
   .login-button:hover {
     background-color: #0056b3;
   }
+
+  .logout-button {
+    width: 100%;
+    padding: 10px;
+    background-color: #dc3545;
+    color: white;
+    font-weight: bold;
+    border: none;
+    border-radius: 6px;
+    cursor: pointer;
+  }
+  
+  .logout-button:hover {
+    background-color: #a71d2a;
+  }
   
