Added Login Page with Cognito

--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,17 @@
 /* General Page Styling */
-body {
+html, body {
     margin: 0;
     padding: 0;
-    font-family: 'Roboto', sans-serif;
-    background-color: #f8f9fa; /* Light gray for a clean look */
-}
-
-/* Fullscreen Map */
-#map {
-    width: 100vw;
-    height: 100vh;
-}
+    height: 100%;
+    width: 100%;
+  }
+  
+  #map {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+  }  
 
 /* Floating Sidebar */
 .sidebar {
