--- a/styles.css
+++ b/styles.css
@@ -53,6 +53,7 @@ html, body {
     background: transparent;
     border: none;
     padding: 0;
+    margin: 0;
     cursor: pointer;
   }
   
@@ -69,9 +70,8 @@ html, body {
     transform: scale(1.1);
   }
   
-  /* Layer Checkboxes */
   .layer-toggle-group {
-    margin-top: 8px;
+    margin-top: 10px;
   }
   
   .sidebar label {
